// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Checkbox component/> should render correctly with a custom checkbox 1`] = `
<div>
  25 schmeckles
</div>
`;

exports[`component <Checkbox component/> should render correctly with custom props 1`] = `
<input
  aria-label="test"
  name="test"
  style="font-size: 18px; cursor: pointer; padding: 0px; margin-top: 1px; vertical-align: middle; position: relative;"
  test="false"
  type="checkbox"
/>
`;

exports[`should render correctly when a custom component is not provided 1`] = `
<input
  aria-label="test"
  name="test"
  type="checkbox"
/>
`;
